Version 2.02.169 - 
=====================================
  Deactivate active origin first before removal for improved workflow.
  Fix regression of accepting options --type and -m with lvresize (2.02.158).
  Add lvconvert --swapmetadata, new specific way to swap pool metadata LVs.
  Add lvconvert --startpoll, new specific way to start polling conversions.
  Add lvconvert --mergethin, new specific way to merge thin snapshots.
  Add lvconvert --mergemirrors, new specific way to merge split mirrors.
  Add lvconvert --mergesnapshot, new specific way to combine cow LVs.
  Split up lvconvert code based on command definitions.
  Split up lvchange code based on command definitions.
  Generate help output and man pages from command definitions.
  Verify all command line items against command definition.
  Match every command run to one command definition.
  Specify every allowed command definition/syntax in command-lines.in.
  Add extra memory page when limiting pthread stack size in clvmd.
  Support striped/raid0* <-> raid10_near conversions
  Support shrinking of RaidLvs
  Support region size changes on existing RaidLVs
  Avoid parallel usage of cpg_mcast_joined() in clvmd with corosync.
  Support raid6_{ls,rs,la,ra}_6 segment types and conversions from/to it.
  Support raid6_n_6 segment type and conversions from/to it.
  Support raid5_n segment type and conversions from/to it.
  Support new internal command _dmeventd_thin_command.
  Introduce new dmeventd/thin_command configurable setting.
  Use new default units 'r' for displaying sizes.
  Also unmount mount point on top of MD device if using blkdeactivate -u.
  Restore check preventing resize of cache type volumes (2.02.158).
  Add missing udev sync when flushing dirty cache content.
  vgchange -p accepts only uint32 numbers.
  Report thin LV date for merged LV when the merge is in progress.
  Detect if snapshot merge really started before polling for progress.